force-app/main/default/objects/pse__Proj__c/fields/Partner_Support_Call_Transition_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Support_Call_Transition_Date__c</fullName>
    <label>Partner Support Call Transition Date</label>
    <type>Date</type>
</CustomField>