force-app/main/default/objects/pse__Proj__c/fields/Partner_Support_Call_Transition_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Support_Call_Transition_Status__c</fullName>
    <label>Partner Support Call Transition Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>