force-app/main/default/objects/pse__Proj__c/fields/Partner_Support_Transition_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Partner_Support_Transition_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Support Transition Scheduled</label>
    <type>Checkbox</type>
</CustomField>