force-app/main/default/objects/pse__Proj__c/fields/Peer_Review_Phase__c.field-meta.xml
<CustomField>
    <fullName>Peer_Review_Phase__c</fullName>
    <label>Peer Review Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phase 1 (Solution Design)</fullName>
            </value>
            <value>
                <fullName>Phase 2 (User Acceptance)</fullName>
            </value>
            <value>
                <fullName>Phase 3 (Post-Mortem)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>