force-app/main/default/objects/pse__Proj__c/fields/Peer_Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>Peer_Review_Reason__c</fullName>
    <label>Peer Review Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Health Check Requested</fullName>
            </value>
            <value>
                <fullName>Partner Spot Check</fullName>
            </value>
            <value>
                <fullName>Technical / Business Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>