force-app/main/default/objects/pse__Proj__c/fields/Peer_Review_Requester__c.field-meta.xml
<CustomField>
    <fullName>Peer_Review_Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Peer Review Requester</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Contact)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>