force-app/main/default/objects/pse__Proj__c/fields/Peer_Review_Requester_Firm__c.field-meta.xml
<CustomField>
    <fullName>Peer_Review_Requester_Firm__c</fullName>
    <formula>IF(
  ISPICKVAL(Peer_Review_Requester__r.Account.Type,&quot;Internal&quot;),
  &quot;Internal&quot;,
  IF(
    ISPICKVAL(Peer_Review_Requester__r.Account.Type,&quot;Customer&quot;),
    &quot;Customer&quot;,
    IF(
      CONTAINS(TEXT(Peer_Review_Requester__r.Account.Type),&quot;Partner&quot;),
      &quot;Partner&quot;,
      &quot;Unknown&quot;
    )
  )
)</formula>
    <label>Peer Review Requester Firm</label>
    <type>Text</type>
</CustomField>