force-app/main/default/objects/pse__Proj__c/fields/Per_Diem_Domestic__c.field-meta.xml
<CustomField>
    <fullName>Per_Diem_Domestic__c</fullName>
    <label>Per Diem (Domestic)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>