force-app/main/default/objects/pse__Proj__c/fields/PGL_Email__c.field-meta.xml
<CustomField>
    <fullName>PGL_Email__c</fullName>
    <label>PGL Email</label>
    <type>Email</type>
</CustomField>