force-app/main/default/objects/pse__Proj__c/fields/PMP_Implementation_Status__c.field-meta.xml
<CustomField>
    <fullName>PMP_Implementation_Status__c</fullName>
    <formula>&quot;Outdated field - please contact Business Operations&quot;</formula>
    <label>PMP Implementation Status</label>
    <type>Text</type>
</CustomField>