force-app/main/default/objects/pse__Proj__c/fields/Primary_Partner_Participant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Partner_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEM Primary Partner Participant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Board Participant</relationshipLabel>
    <relationshipName>Project_Board_Participant</relationshipName>
    <type>Lookup</type>
</CustomField>