force-app/main/default/objects/pse__Proj__c/fields/Primary_Partner_Participant_Firm__c.field-meta.xml
<CustomField>
    <fullName>Primary_Partner_Participant_Firm__c</fullName>
    <formula>Primary_Partner_Participant__r.Account.Name</formula>
    <label>Primary Partner Participant Firm</label>
    <type>Text</type>
</CustomField>