force-app/main/default/objects/pse__Proj__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intapp Integrate</fullName>
            </value>
            <value>
                <fullName>Intapp Integrate - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Conflicts</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Conflicts - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Experience</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Experience - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Intake</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Intake - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Terms</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Terms - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Time</fullName>
            </value>
            <value>
                <fullName>Intapp Time - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Walls</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>LegalKey</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>