force-app/main/default/objects/pse__Proj__c/fields/Product_Roadblock__c.field-meta.xml
<CustomField>
    <fullName>Product_Roadblock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please check this flag if there is a major product roadblock that is preventing you from going live.</description>
    <inlineHelpText>Please check this flag if there is a major product roadblock that is preventing you from going live.</inlineHelpText>
    <label>Product Roadblock</label>
    <type>Checkbox</type>
</CustomField>