force-app/main/default/objects/pse__Proj__c/fields/Product_Version__c.field-meta.xml
<CustomField>
    <fullName>Product_Version__c</fullName>
    <label>Product Version</label>
    <type>TextArea</type>
</CustomField>