force-app/main/default/objects/pse__Proj__c/fields/Project_Age__c.field-meta.xml
<CustomField>
    <fullName>Project_Age__c</fullName>
    <formula>TODAY()-DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>