force-app/main/default/objects/pse__Proj__c/fields/Project_Amount_Audit__c.field-meta.xml
<CustomField>
    <fullName>Project_Amount_Audit__c</fullName>
    <formula>IF(
  AND(
    OR(
      ISPICKVAL(pse__Billing_Type__c,&quot;Time and Materials&quot;),
      ISPICKVAL(pse__Billing_Type__c,&quot;Partner Prime&quot;)
    ),
    NOT(Total_Milestone_Amount__c = 0)
  ),
  &quot;All Milestone should have a 0 Amount&quot;,
  IF(
    AND(
      ISPICKVAL(pse__Billing_Type__c,&quot;Blended&quot;),
      Total_Milestone_Amount__c = 0
    ),
    &quot;Missing Milestone Amount&quot;,
    IF(
      AND(
        CONTAINS(TEXT(pse__Project_Status__c),&quot;Open&quot;),
        NOT(pse__Bookings__c=Total_Milestone_Amount__c)
      ),
      &quot;Missing Milestone Amount&quot;,
      IF(
        AND(
          CONTAINS(TEXT(pse__Project_Status__c),&quot;Closed&quot;),
          NOT(pse__Bookings__c=Total_Milestone_Amount__c),
          NOT(Total_Milestone_Amount__c=Approved_Milestone_Amount__c)
        ),
        &quot;Missing or Unapproved Milestone Amount&quot;,
        &quot;&quot;
      )
    )
  )
)</formula>
    <label>Project Amount Audit</label>
    <type>Text</type>
</CustomField>