force-app/main/default/objects/pse__Proj__c/fields/Project_Board_Participant__c.field-meta.xml
<CustomField>
    <fullName>Project_Board_Participant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Board Participant</label>
    <type>Checkbox</type>
</CustomField>