force-app/main/default/objects/pse__Proj__c/fields/Project_Board_Participant_Count__c.field-meta.xml
<CustomField>
    <fullName>Project_Board_Participant_Count__c</fullName>
    <formula>IF(
  OR(
    ISPICKVAL(Project_Board_Status__c,&quot;Participating in Program&quot;),
    ISPICKVAL(Project_Board_Status__c,&quot;Program Completed&quot;)
  ),
  1,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Board Participant Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>