force-app/main/default/objects/pse__Proj__c/fields/Project_Creation_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Project_Creation_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is populated when a project approval notification has already been sent. Workflow rule code PR-07 is the related email notification</description>
    <label>Project Creation Notification Sent</label>
    <type>Checkbox</type>
</CustomField>