force-app/main/default/objects/pse__Proj__c/fields/Project_Creation_Rejection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Project_Creation_Rejection_Notes__c</fullName>
    <label>Project Creation Rejection Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>