force-app/main/default/objects/pse__Proj__c/fields/Project_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Name__c</fullName>
    <formula>pse__Project_Manager__r.FirstName &amp; &quot; &quot; &amp; pse__Project_Manager__r.LastName</formula>
    <label>Project Manager Name</label>
    <type>Text</type>
</CustomField>