force-app/main/default/objects/pse__Proj__c/fields/Project_Objective_and_Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Project_Objective_and_Success_Criteria__c</fullName>
    <label>CEM Project Objective &amp; Success Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>