force-app/main/default/objects/pse__Proj__c/fields/Project_Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Project_Status_Indicator__c</fullName>
    <description>Displays green, yellow or red image corresponding to Project&apos;s Overall Status</description>
    <formula>IMAGE(CASE(pse__Project_Status__c, 
&quot;Green&quot;, &quot;/servlet/servlet.FileDownload?file=00P50000005vPYv&quot;,
&quot;Amber&quot;, &quot;/servlet/servlet.FileDownload?file=00P50000005vPZ5&quot;,
&quot;Red&quot;, &quot;/servlet/servlet.FileDownload?file=00P50000005vPZ0&quot;,
&quot;/s.gif&quot;), 
&quot;status color&quot;)</formula>
    <inlineHelpText>Displays green, yellow or red image corresponding to Project&apos;s Overall Status</inlineHelpText>
    <label>Project Status Indicator</label>
    <type>Text</type>
</CustomField>