force-app/main/default/objects/pse__Proj__c/fields/Project_Survey_sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Project_Survey_sent_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has project survey been run with customer?</description>
    <inlineHelpText>Has project survey been run with customer?</inlineHelpText>
    <label>Project Survey sent to Customer</label>
    <type>Checkbox</type>
</CustomField>