force-app/main/default/objects/pse__Proj__c/fields/Project_Type_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Type_Short_Name__c</fullName>
    <label>Project Type Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>