force-app/main/default/objects/pse__Proj__c/fields/ProjectKickoffDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectKickoffDate__c</fullName>
    <label>Project Kickoff Date</label>
    <type>Date</type>
</CustomField>