force-app/main/default/objects/pse__Proj__c/fields/Provided_Sub_Health_Lifecycle_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Provided_Sub_Health_Lifecycle_Contacts__c</fullName>
    <description>Lifecycle, Health Rating and Subscription contacts provided?  (yes, no, n/a)</description>
    <inlineHelpText>Lifecycle, Health Rating and Subscription contacts provided?  (yes, no, n/a)</inlineHelpText>
    <label>Provided Sub Health, Lifecycle, Contacts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>