force-app/main/default/objects/pse__Proj__c/fields/PS_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>PS_Manager_Email__c</fullName>
    <description>Stores the PS Manager&apos;s email address to be used in email notifications.</description>
    <inlineHelpText>PS Manager Email is set by a series of Workflow Rules.</inlineHelpText>
    <label>PS Manager Email</label>
    <type>Email</type>
</CustomField>