force-app/main/default/objects/pse__Proj__c/fields/pse__Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Billing_Type__c</fullName>
    <inlineHelpText>Fixed Price: Used for all fixed fee projects contracted on Intapp paper
Time &amp; Material: Used for all time &amp; material projects contracted on Intapp paper
Partner Prime: Used for all projects contracted on partner paper</inlineHelpText>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Price</fullName>
                <color>#0B6FCE</color>
                <label>Fixed Price</label>
            </value>
            <value>
                <fullName>Blended</fullName>
                <color>#A845DC</color>
                <label>Blended</label>
            </value>
            <value>
                <fullName>Time and Materials</fullName>
                <color>#78C953</color>
                <label>Time and Materials</label>
            </value>
            <value>
                <fullName>Partner Prime</fullName>
                <color>#E27001</color>
                <label>Partner Prime</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>