force-app/main/default/objects/pse__Proj__c/fields/pse__Exclude_from_Project_Planner__c.field-meta.xml
<CustomField>
    <fullName>pse__Exclude_from_Project_Planner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows exclusion of a project from the project planner</description>
    <inlineHelpText>Check to exclude this project from project planner</inlineHelpText>
    <label>Exclude from Project Planner</label>
    <type>Checkbox</type>
</CustomField>