force-app/main/default/objects/pse__Proj__c/fields/pse__Include_In_Forecasting__c.field-meta.xml
<CustomField>
    <fullName>pse__Include_In_Forecasting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this project participate in project forecasting?</description>
    <label>Include In Forecasting</label>
    <type>Checkbox</type>
</CustomField>