force-app/main/default/objects/pse__Proj__c/fields/pse__Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this project is billable to a customer.</inlineHelpText>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>