force-app/main/default/objects/pse__Proj__c/fields/pse__Project_Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Status__c</fullName>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <color>#78C953</color>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Amber</fullName>
                <color>#F3D904</color>
                <label>Amber</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <color>#CC0000</color>
                <label>Red</label>
            </value>
            <value>
                <fullName>Black</fullName>
                <color>#000000</color>
                <label>Black</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>