force-app/main/default/objects/pse__Proj__c/fields/pse__Stage__c.field-meta.xml
<CustomField>
    <fullName>pse__Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open - Not Started</fullName>
                <default>true</default>
                <label>Open - Not Started</label>
            </value>
            <value>
                <fullName>Open - In Process</fullName>
            </value>
            <value>
                <fullName>Open - On Hold</fullName>
            </value>
            <value>
                <fullName>Open - Pending Closure (Completed)</fullName>
            </value>
            <value>
                <fullName>Open - Pending Closure (Cancelled)</fullName>
            </value>
            <value>
                <fullName>Open - Pending Closure (Abandoned)</fullName>
            </value>
            <value>
                <fullName>Open - Pending Closure (Transitioned to Partner)</fullName>
            </value>
            <value>
                <fullName>Closed - Completed</fullName>
            </value>
            <value>
                <fullName>Closed - Canceled</fullName>
            </value>
            <value>
                <fullName>Closed - Abandoned</fullName>
            </value>
            <value>
                <fullName>Closed - Transitioned to Partner</fullName>
            </value>
            <value>
                <fullName>In Transition – Partner Project In Transition</fullName>
            </value>
            <value>
                <fullName>Moved to Open Air</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>