force-app/main/default/objects/pse__Proj__c/fields/Related_PMP__c.field-meta.xml
<CustomField>
    <fullName>Related_PMP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related PMP</label>
    <referenceTo>Product_Migration_Placeholder__c</referenceTo>
    <relationshipLabel>Migration Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>