force-app/main/default/objects/pse__Proj__c/fields/Released_Billings__c.field-meta.xml
<CustomField>
    <fullName>Released_Billings__c</fullName>
    <label>Released Billings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>