force-app/main/default/objects/pse__Proj__c/fields/Remaining_PS_Product_issues_documented__c.field-meta.xml
<CustomField>
    <fullName>Remaining_PS_Product_issues_documented__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are any other remaining PS or Product issues detailed in the project closing document?</description>
    <inlineHelpText>Are any other remaining PS or Product issues detailed in the project closing document?</inlineHelpText>
    <label>Remaining PS/Product issues documented?</label>
    <type>Checkbox</type>
</CustomField>