force-app/main/default/objects/pse__Proj__c/fields/Remaining_Work_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Work_Weeks__c</fullName>
    <formula>Remaining_Weekdays__c/5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Work Weeks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>