force-app/main/default/objects/pse__Proj__c/fields/Secondary_Partner_Participant__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Partner_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEM Secondary Partner Participant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Board Participant</relationshipLabel>
    <relationshipName>Project_Board_Participant2</relationshipName>
    <type>Lookup</type>
</CustomField>