force-app/main/default/objects/pse__Proj__c/fields/SmartSheetWorkspaceID__c.field-meta.xml
<CustomField>
    <fullName>SmartSheetWorkspaceID__c</fullName>
    <label>SmartSheetWorkspaceID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>