force-app/main/default/objects/pse__Proj__c/fields/SRT_Installed__c.field-meta.xml
<CustomField>
    <fullName>SRT_Installed__c</fullName>
    <description>Support Reporting Tool installed?  (yes, no, n/a)</description>
    <inlineHelpText>Support Reporting Tool installed?  (yes, no, n/a)</inlineHelpText>
    <label>SRT Installed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>