force-app/main/default/objects/pse__Proj__c/fields/Standard_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Standard_Project_Name__c</fullName>
    <label>Standard Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>