force-app/main/default/objects/pse__Proj__c/fields/Support_issues_in_closing_docs__c.field-meta.xml
<CustomField>
    <fullName>Support_issues_in_closing_docs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are all support issues detailed in the project closing document?</description>
    <inlineHelpText>Are all support issues detailed in the project closing document?</inlineHelpText>
    <label>Support issues in closing docs</label>
    <type>Checkbox</type>
</CustomField>