force-app/main/default/objects/pse__Proj__c/fields/Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent__c</fullName>
    <description>Project Survey sent to Customer (yes, no, n/a)</description>
    <inlineHelpText>Project Survey sent to Customer (yes, no, n/a)</inlineHelpText>
    <label>Survey Sent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>