force-app/main/default/objects/pse__Proj__c/fields/Technical_Status__c.field-meta.xml
<CustomField>
    <fullName>Technical_Status__c</fullName>
    <description>PSA - Indicator of project&apos;s technical status</description>
    <inlineHelpText>Indicator of project&apos;s technical status</inlineHelpText>
    <label>Technical Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>