force-app/main/default/objects/pse__Proj__c/fields/TFG_Legacy_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>TFG_Legacy_Project_ID__c</fullName>
    <label>TFG Legacy Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>