force-app/main/default/objects/pse__Proj__c/fields/Total_Budget_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Hours__c</fullName>
    <formula>Contract_Hours_B__c+Contract_Hours_NB__c+ICR_Hours_NB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Budget Hours (New)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>