force-app/main/default/objects/pse__Proj__c/fields/Total_Contract_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Hours__c</fullName>
    <formula>Contract_Hours_B__c+Contract_Hours_NB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contract Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>