force-app/main/default/objects/pse__Proj__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <formula>pse__Billable_External_Hours__c+
pse__Billable_Internal_Hours__c+
pse__Non_Billable_External_Hours__c+
pse__Non_Billable_Internal_Hours__c+
pse__Credited_Non_Billable_Internal_Hours__c+
pse__Excluded_Hours__c</formula>
    <inlineHelpText>B Internal &amp; External + NB Internal &amp; External + Credited NB Internal + Excluded Hours</inlineHelpText>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>