force-app/main/default/objects/pse__Proj__c/fields/UAT_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>UAT_Status_Date__c</fullName>
    <description>SC-000056</description>
    <label>UAT Status Date</label>
    <type>Date</type>
</CustomField>