force-app/main/default/objects/pse__Proj__c/recordTypes/Partner_Projects.recordType-meta.xml
<RecordType>
    <fullName>Partner_Projects</fullName>
    <active>true</active>
    <label>Partner Projects</label>
</RecordType>