force-app/main/default/objects/pse__Proj__c/recordTypes/PSA_Projects.recordType-meta.xml
<RecordType>
    <fullName>PSA_Projects</fullName>
    <active>true</active>
    <label>PSA Projects</label>
</RecordType>