force-app/main/default/objects/pse__Proj__c/validationRules/Action_Plan_Required_if_Health_not_Green.validationRule-meta.xml
<ValidationRule>
    <fullName>Action_Plan_Required_if_Health_not_Green</fullName>
    <active>false</active>
    <description>If any health indicator isn&apos;t green, the action plan is required.</description>
    <errorConditionFormula>AND(
   OR(
      ISPICKVAL(pse__Project_Status__c,&quot;Red&quot;), 
      ISPICKVAL(pse__Project_Status__c,&quot;Amber&quot;) 
   ),
   ISBLANK(Action_Plan__c),
   NOT($Profile.Id=&quot;00e30000000bvR3&quot;)
)</errorConditionFormula>
    <errorDisplayField>Action_Plan__c</errorDisplayField>
    <errorMessage>Please provide an action plan for the amber and red status fields.</errorMessage>
</ValidationRule>