force-app/main/default/objects/pse__Proj__c/validationRules/AreAllExpensesAddedToProject_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>AreAllExpensesAddedToProject_is_required</fullName>
    <active>true</active>
    <description>Are all expenses added to the project question field is required when closing a project</description>
    <errorConditionFormula>AND(
				ISBLANK(TEXT(Areallexpensesaddedtotheproject__c)),
				 CONTAINS(TEXT(pse__Stage__c), &quot;Pending&quot;),
NOT($Profile.Id=&quot;00e30000000bvR3&quot;)
)</errorConditionFormula>
    <errorDisplayField>Areallexpensesaddedtotheproject__c</errorDisplayField>
    <errorMessage>Are all expenses added to the project? is required when closing a project.</errorMessage>
</ValidationRule>